--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="~/css/styles.css">
 </head>
 <body>
-    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-        <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+    <div class="fmn-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+        <header class="fmn-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
             <div class="mdl-layout__header-row">
                 <span class="mdl-layout-title">Always Remember...</span>
                 <div class="mdl-layout-spacer"></div>
@@ -33,7 +33,7 @@
                 { 
                 <div id="userMenuContainer">
                     <div id="userInfoContainer" >
-                        <ul class="demo-list-two mdl-list" id="userMenu">
+                        <ul class="fmn-list-two mdl-list" id="userMenu">
                             <li class="mdl-list__item mdl-list__item--two-line">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="material-icons mdl-list__item-avatar">person</i>
@@ -75,11 +75,11 @@
                     </ul>
                 </div>
         </header>
-        <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
-            <header class="demo-drawer-header">
+        <div class="fmn-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+            <header class="fmn-drawer-header">
                 <partial name="_LoginPartial" />
             </header>
-            <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+            <nav class="fmn-navigation mdl-navigation mdl-color--blue-grey-800">
                 <a class="mdl-navigation__link" asp-page="/Index"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
                 <a class="mdl-navigation__link" asp-page="/Events/Upcoming"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">alarm</i>Upcoming</a>
                 <a class="mdl-navigation__link" asp-page="/Events/Index"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Events</a>
@@ -91,8 +91,8 @@
         </div>
         <main class="mdl-layout__content mdl-color--grey-100">
 
-            <div class="mdl-grid demo-content">
-                <div class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-grid">
+            <div class="mdl-grid fmn-content">
+                <div class="fmn-graphs mdl-shadow--2dp mdl-color--white mdl-grid">
                     @RenderBody()
                 </div>
             </div>
