--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -17,29 +17,29 @@
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
-.demo-avatar {
+.fmn-avatar {
   width: 48px;
   height: 48px;
   border-radius: 24px;
 }
-.demo-layout .mdl-layout__header .mdl-layout__drawer-button {
+.fmn-layout .mdl-layout__header .mdl-layout__drawer-button {
   color: rgba(0, 0, 0, 0.54);
 }
 .mdl-layout__drawer .avatar {
   margin-bottom: 16px;
 }
-.demo-drawer {
+.fmn-drawer {
   border: none;
 }
 /* iOS Safari specific workaround */
-.demo-drawer .mdl-menu__container {
+.fmn-drawer .mdl-menu__container {
   z-index: -1;
 }
-.demo-drawer .demo-navigation {
+.fmn-drawer .fmn-navigation {
   z-index: -2;
 }
 /* END iOS Safari specific workaround */
-.demo-drawer .mdl-menu .mdl-menu__item {
+.fmn-drawer .mdl-menu .mdl-menu__item {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -47,7 +47,7 @@ html, body {
       -ms-flex-align: center;
           align-items: center;
 }
-.demo-drawer-header {
+.fmn-drawer-header {
   box-sizing: border-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -61,7 +61,7 @@ html, body {
   padding: 16px;
   height: 151px;
 }
-.demo-avatar-dropdown {
+.fmn-avatar-dropdown {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -75,12 +75,12 @@ html, body {
   width: 100%;
 }
 
-.demo-navigation {
+.fmn-navigation {
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
 }
-.demo-layout .demo-navigation .mdl-navigation__link {
+.fmn-layout .fmn-navigation .mdl-navigation__link {
   display: -webkit-flex !important;
   display: -ms-flexbox !important;
   display: flex !important;
@@ -93,38 +93,38 @@ html, body {
   color: rgba(255, 255, 255, 0.56);
   font-weight: 500;
 }
-.demo-layout .demo-navigation .mdl-navigation__link:hover {
+.fmn-layout .fmn-navigation .mdl-navigation__link:hover {
   background-color: #00BCD4;
   color: #37474F;
 }
-.demo-navigation .mdl-navigation__link .material-icons {
+.fmn-navigation .mdl-navigation__link .material-icons {
   font-size: 24px;
   color: rgba(255, 255, 255, 0.56);
   margin-right: 32px;
 }
 
-.demo-content {
+.fmn-content {
   max-width: 1080px;
 }
 
-.demo-charts {
+.fmn-charts {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
-.demo-chart:nth-child(1) {
+.fmn-chart:nth-child(1) {
   color: #ACEC00;
 }
-.demo-chart:nth-child(2) {
+.fmn-chart:nth-child(2) {
   color: #00BBD6;
 }
-.demo-chart:nth-child(3) {
+.fmn-chart:nth-child(3) {
   color: #BA65C9;
 }
-.demo-chart:nth-child(4) {
+.fmn-chart:nth-child(4) {
   color: #EF3C79;
 }
-.demo-graphs {
+.fmn-graphs {
   padding: 16px 32px;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -140,21 +140,21 @@ html, body {
  * not float around outside their container in IE10/11.
  * Using a browserhacks.com solution for now.
  */
-_:-ms-input-placeholder, :root .demo-graphs {
+_:-ms-input-placeholder, :root .fmn-graphs {
   min-height: 664px;
 }
-_:-ms-input-placeholder, :root .demo-graph {
+_:-ms-input-placeholder, :root .fmn-graph {
   max-height: 300px;
 }
 /* TODO end */
-.demo-graph:nth-child(1) {
+.fmn-graph:nth-child(1) {
   color: #00b9d8;
 }
-.demo-graph:nth-child(2) {
+.fmn-graph:nth-child(2) {
   color: #d9006e;
 }
 
-.demo-cards {
+.fmn-cards {
   -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -162,48 +162,48 @@ _:-ms-input-placeholder, :root .demo-graph {
       -ms-flex-line-pack: start;
           align-content: flex-start;
 }
-.demo-cards .demo-separator {
+.fmn-cards .fmn-separator {
   height: 32px;
 }
-.demo-cards .mdl-card__title.mdl-card__title {
+.fmn-cards .mdl-card__title.mdl-card__title {
   color: white;
   font-size: 24px;
   font-weight: 400;
 }
-.demo-cards ul {
+.fmn-cards ul {
   padding: 0;
 }
-.demo-cards h3 {
+.fmn-cards h3 {
   font-size: 1em;
 }
-.demo-updates .mdl-card__title {
+.fmn-updates .mdl-card__title {
   min-height: 200px;
   background-image: url('images/dog.png');
   background-position: 90% 100%;
   background-repeat: no-repeat;
 }
-.demo-cards .mdl-card__actions a {
+.fmn-cards .mdl-card__actions a {
   color: #00BCD4;
   text-decoration: none;
 }
 
-.demo-options h3 {
+.fmn-options h3 {
   margin: 0;
 }
-.demo-options .mdl-checkbox__box-outline {
+.fmn-options .mdl-checkbox__box-outline {
   border-color: rgba(255, 255, 255, 0.89);
 }
-.demo-options ul {
+.fmn-options ul {
   margin: 0;
   list-style-type: none;
 }
-.demo-options li {
+.fmn-options li {
   margin: 4px 0;
 }
-.demo-options .material-icons {
+.fmn-options .material-icons {
   color: rgba(255, 255, 255, 0.89);
 }
-.demo-options .mdl-card__actions {
+.fmn-options .mdl-card__actions {
   height: 64px;
   display: -webkit-flex;
   display: -ms-flexbox;
