--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,35 +6,35 @@
 
 <div class="page-header" id="banner">
     <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid fmn-content">
-            <div class="fmn-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="fmn-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
+        <div class="mdl-grid demo-content">
+            <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
                     <use xlink:href="#piechart" mask="url(#piemask)" />
                     <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan font-size="0.2" dy="-0.07">%</tspan></text>
                 </svg>
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="fmn-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
+                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
                     <use xlink:href="#piechart" mask="url(#piemask)" />
                     <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">90<tspan dy="-0.07" font-size="0.2">%</tspan></text>
                 </svg>
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="fmn-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
+                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
                     <use xlink:href="#piechart" mask="url(#piemask)" />
                     <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
                 </svg>
-                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="fmn-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
+                <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
                     <use xlink:href="#piechart" mask="url(#piemask)" />
                     <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">100<tspan dy="-0.07" font-size="0.2">%</tspan></text>
                 </svg>
             </div>
-            <div class="fmn-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
-                <svg fill="currentColor" viewBox="0 0 500 250" class="fmn-graph">
+            <div class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
+                <svg fill="currentColor" viewBox="0 0 500 250" class="demo-graph">
                     <use xlink:href="#chart" />
                 </svg>
-                <svg fill="currentColor" viewBox="0 0 500 250" class="fmn-graph">
+                <svg fill="currentColor" viewBox="0 0 500 250" class="demo-graph">
                     <use xlink:href="#chart" />
                 </svg>
             </div>
-            <div class="fmn-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
-                <div class="fmn-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
+            <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
+                <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
                     <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
                         <h2 class="mdl-card__title-text">Updates</h2>
                     </div>
@@ -45,8 +45,8 @@
                         <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">Read More</a>
                     </div>
                 </div>
-                <div class="fmn-separator mdl-cell--1-col"></div>
-                <div class="fmn-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
+                <div class="demo-separator mdl-cell--1-col"></div>
+                <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
                     <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50">
                         <h3>View options</h3>
                         <ul>
